--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 <li><a href="http://linkedin.com/in/workman">LinkedIn</a></li>
 </ul>
 
+<hr>
+Last edited June 29, 2014 | Find an issue? <a href="https://github.com/Workman/workman.github.io/issues">Submit it on Github!</a>
+
 </div>
 <div class="g-person" data-width="250" data-href="//plus.google.com/u/0/114473478240107892325" data-showtagline="false" data-rel="author"></div>
 
