--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Last edited June 29, 2014 | Find an issue? <a href="https://github.com/Workman/w
 </div>
 <div id="silly_widgets">
 <div class="g-person" data-width="450" data-href="//plus.google.com/u/0/114473478240107892325" data-showtagline="false" data-rel="author"></div>
-<a class="twitter-timeline" href="https://twitter.com/ifworkman" data-widget-id="483222295851188224">Tweets by @ifworkman</a>
+<a class="twitter-timeline" width="450" height="400" href="https://twitter.com/ifworkman" data-widget-id="483222295851188224">Tweets by @ifworkman</a>
 </div>
 <!-- Also, what are you doing looking at this? Please send comments to Email: workman@internetfaction.com -->
 
