--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <h3>Code</h3>
 <p>I'm a curious full-stack, web-oriented generalist and mostly a Rubist these days.</p>
 <p>Langs, <span title="In No Particular Order">INPO</span>: Ruby, PHP, SQL, HTML, Javascript, CSS. (Finding reasons to play with Go, Python)</p>
-<p>Frames, <span title="In No Particular Order">INPO</span>: Ruby on Rails, jQuery, Symfony(1,2) (Some: Sinatra, Node.js, Backbone, React, Docker)</p>
+<p>Frames, <span title="In No Particular Order">INPO</span>: Ruby on Rails, jQuery, Symfony, &amp; Bootstrap (Some: Sinatra, Node.js, Backbone, React, Docker)</p>
 <p>Also: Scrum, AWS(EC2, S3, CF), Heroku, Git, Chef</p>
 <ul>
 <li><a href="http://www.github.com/workman">Github</a></li>
@@ -47,7 +47,7 @@ Last edited June 29, 2014 | Find an issue? <a href="https://github.com/Workman/w
 </div>
 <div id="silly_widgets">
 <div class="g-person" data-width="450" data-href="//plus.google.com/u/0/114473478240107892325" data-showtagline="false" data-rel="author"></div>
-<a class="twitter-timeline" width="450" height="400" href="https://twitter.com/ifworkman" data-widget-id="483222295851188224">Tweets by @ifworkman</a>
+<div class="twitter-timeline" data-chrome="nofooter" data-widget-id="483222295851188224"></div>
 </div>
 <!-- Also, what are you doing looking at this? Please send comments to Email: workman@internetfaction.com -->
 
