Some cleanup and adjusted height of twitter box

--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@ Last edited June 29, 2014 | Find an issue? <a href="https://github.com/Workman/w
 </div>
 <div id="silly_widgets">
 <div class="g-person" data-width="450" data-href="//plus.google.com/u/0/114473478240107892325" data-showtagline="false" data-rel="author"></div>
-<div class="twitter-timeline" data-chrome="nofooter" data-widget-id="483222295851188224"></div>
+<div class="twitter-timeline" data-chrome="nofooter" height="350" data-widget-id="483222295851188224"></div>
 </div>
 <!-- Also, what are you doing looking at this? Please send comments to Email: workman@internetfaction.com -->
+</body>
 
 <!-- Google+ -->
 <script type="text/javascript">
@@ -74,5 +75,4 @@ Last edited June 29, 2014 | Find an issue? <a href="https://github.com/Workman/w
   ga('send', 'pageview');
 
 </script>
-</body>
 </html>
