--- a/index.html
+++ b/index.html
@@ -41,38 +41,26 @@
 <li><a href="http://linkedin.com/in/workman">LinkedIn</a></li>
 </ul>
 
+<!-- Obligitory Footer -->
 <hr>
-Last edited June 29, 2014 | Find an issue? <a href="https://github.com/Workman/workman.github.io/issues">Submit it on Github!</a>
+Last edited 2014 June 29 | Find an issue? <a href="https://github.com/Workman/workman.github.io/issues">Submit it on Github!</a>
 
 </div>
 <div id="silly_widgets">
 <div class="g-person" data-width="450" data-href="//plus.google.com/u/0/114473478240107892325" data-showtagline="false" data-rel="author"></div>
 <div class="twitter-timeline" data-chrome="nofooter" height="350" data-widget-id="483222295851188224"></div>
 </div>
-<!-- Also, what are you doing looking at this? Please send comments to Email: workman@internetfaction.com -->
 </body>
 
-<!-- Google+ -->
 <script type="text/javascript">
-  (function() {
-    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-    po.src = 'https://apis.google.com/js/platform.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-  })();
+// Google+
+(function() {var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;po.src = 'https://apis.google.com/js/platform.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);})();
+
+// Twitter
+!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+
+// Analytics
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-37392276-3', 'auto');ga('send', 'pageview');
 </script>
-
-<!-- Twitter -->
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-
-<!-- Analytics -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-37392276-3', 'auto');
-  ga('send', 'pageview');
-
-</script>
+<!-- Also, what are you doing looking at this? Please send comments to Email: workman@internetfaction.com -->
 </html>
