Added XKCD. For fun.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@ Last edited 2014 June 29 | Find an issue? <a href="https://github.com/Workman/wo
 </div>
 <div id="silly_widgets">
 <div class="g-person" data-width="450" data-href="//plus.google.com/u/0/114473478240107892325" data-showtagline="false" data-rel="author"></div>
-<div class="twitter-timeline" data-chrome="nofooter" height="350" data-widget-id="483222295851188224"></div>
+
+<div class="twitter-timeline" data-chrome="nofooter" height="300" data-widget-id="483222295851188224"></div>
+
+<p><a href="http://xkcd.com/1349/"><img src="http://imgs.xkcd.com/comics/shouldnt_be_hard.png" width="450" height="164" title="(six hours later) ARGH. How are these stupid microchips so durable?! All I want is to undo a massive industrial process with household tools!"></a></p>
 </div>
 </body>
 
